--- a/package.json
+++ b/package.json
@@ -27,7 +27,10 @@
     "@capacitor/haptics": "5.0.6",
     "@capacitor/keyboard": "5.0.6",
     "@capacitor/status-bar": "5.0.6",
+    "@ionic-native/camera": "^5.36.0",
+    "@ionic-native/core": "^5.36.0",
     "@ionic/angular": "^7.0.0",
+    "cordova-plugin-camera": "^7.0.0",
     "cordova-plugin-cszbar": "^1.3.4",
     "firebase": "^10.4.0",
     "ionicons": "^7.0.0",
